--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
+  <div class="alert alert-secondary" role="alert">
+    Angular web app with SpaceX API <a href="https://github.com/r-spacex/SpaceX-API/tree/master/docs/rockets/v4">https://github.com/r-spacex/SpaceX-API/tree/master/docs/rockets/v4</a> by: Daniel Olmos
+  </div>
   <app-root></app-root>
 </body>
 </html>
